<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="#72B2E7"
        android:background="@drawable/rounded_corner_view"
        />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_score"
        android:textSize="45sp"
        android:textColor="#72B2E7"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner_view"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/tryAgainBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_try_again"
        android:backgroundTint="#72B2E7"
        android:layout_marginTop="80dp"
        />


</LinearLayout>