<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#72B2E7"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/rounded_corner_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        />



    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corner_view"
        android:padding="3dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/have_fun"
        android:textAlignment="center"
        android:textColor="#72B2E7"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" />

    <TextView
        android:id="@+id/typename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textColor="#72B2E7"
        android:textSize="28sp"
        android:textStyle="bold"
        android:background="@drawable/rounded_corner_view"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_view"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#72B2E7"
        android:textColorHint="#B072B2E7"
        android:textStyle="italic"
        android:textSize="24sp"
        android:minHeight="48dp"
        android:layout_marginTop="60dp"

        app:layout_constraintEnd_toStartOf="@id/startButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typename"
        app:layout_constraintBaseline_toBaselineOf="@id/startButton"



        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nameInput"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#72B2E7"
        app:layout_constraintTop_toBottomOf="@id/typename"
        android:text="@string/go_button"
        android:textColor="@color/black"

        />




</androidx.constraintlayout.widget.ConstraintLayout>